jenkins/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jenkinsapp-ingress
  namespace: jenkins
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`jenkins-outdated.sungju.xyz`)
      services:
        - name: jenkinsapp
          port: 8080
